objects/pse__Missing_Timecards__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ORG wide setting for Missing Timecard check. It will check for Assignments for Internal Resource and to ignore closed projects.</description>
    <fields>
        <fullName>pse__Check_Assignments_for_internal_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine whether to treat internal resources as External resources</description>
        <label>Check Assignments for internal Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Ignore_Closed_Assignments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Ignore assignments closed for time entry or whose projects are closed for time entry.</description>
        <label>Ignore Closed Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Work_Calendar_Week_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, MTC will utilize the resource&apos;s work calendar to determine which day of of the week that the week starts on. If the resource has no work calendar, it will utilize the R/P/G WC depending on how the job is run.</description>
        <label>Use Resource Work Calendar Week Start</label>
        <type>Checkbox</type>
    </fields>
    <label>Missing Timecards</label>
</CustomObject>